// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input control should match snapshot - Input 1`] = `
<div>
  <input
    class="border-slate-300 focus:outline-cyan-400 bg-slate-50 border-2 rounded-md py-2 px-4 "
    id="test"
    type="email"
  />
</div>
`;

exports[`Input control should match snapshot - Rating 1`] = `
<div>
  <div
    class="flex flex-wrap sm:flex-col"
  >
    <div
      class="text-slate-400 w-full"
    >
      <input
        class="hidden peer"
        id="range-1-test"
        type="radio"
        value="1"
      />
      <label
        class="cursor-pointer text-sm peer peer-checked:text-yellow-400"
        for="range-1-test"
      >
        <span
          class="text-2xl"
        >
          ⭑
        </span>
         (
        1
         
        star
        )
      </label>
    </div>
    <div
      class="text-slate-400 w-full"
    >
      <input
        class="hidden peer"
        id="range-2-test"
        type="radio"
        value="2"
      />
      <label
        class="cursor-pointer text-sm peer peer-checked:text-yellow-400"
        for="range-2-test"
      >
        <span
          class="text-2xl"
        >
          ⭑
        </span>
         (
        2
         
        stars
        )
      </label>
    </div>
    <div
      class="text-slate-400 w-full"
    >
      <input
        class="hidden peer"
        id="range-3-test"
        type="radio"
        value="3"
      />
      <label
        class="cursor-pointer text-sm peer peer-checked:text-yellow-400"
        for="range-3-test"
      >
        <span
          class="text-2xl"
        >
          ⭑
        </span>
         (
        3
         
        stars
        )
      </label>
    </div>
    <div
      class="text-slate-400 w-full"
    >
      <input
        class="hidden peer"
        id="range-4-test"
        type="radio"
        value="4"
      />
      <label
        class="cursor-pointer text-sm peer peer-checked:text-yellow-400"
        for="range-4-test"
      >
        <span
          class="text-2xl"
        >
          ⭑
        </span>
         (
        4
         
        stars
        )
      </label>
    </div>
    <div
      class="text-slate-400 w-full"
    >
      <input
        class="hidden peer"
        id="range-5-test"
        type="radio"
        value="5"
      />
      <label
        class="cursor-pointer text-sm peer peer-checked:text-yellow-400"
        for="range-5-test"
      >
        <span
          class="text-2xl"
        >
          ⭑
        </span>
         (
        5
         
        stars
        )
      </label>
    </div>
  </div>
</div>
`;

exports[`Input control should match snapshot - Text Area 1`] = `
<div>
  <textarea
    class="border-slate-300 focus:outline-cyan-400 bg-slate-50 border-2 rounded-md py-2 px-4 "
    id="test"
    rows="10"
  />
</div>
`;
